# nibygimp

./: .gitignore  CMakeLists.txt  Image.cpp  Image.h  PPM.cpp  PPM.h  image.ppm  main.cpp  test.ppm
src/files/: FileManager.cpp  FileManager.h
src/image/: Image.cpp  Image.h  PPM.cpp  PPM.h
src/tools/: Binarization.cpp  Binarization.h  Blur.cpp  Blur.h  Canny.cpp  Canny.h  CustomBlurDialog.cpp  CustomBlurDialog.h  EdgeDetection.cpp  EdgeDetection.h  Greyscale.cpp  Greyscale.h  Histogram.cpp  Histogram.h  HistogramDisplay.cpp  HistogramDisplay.h  HoughTransform.cpp  HoughTransform.h  MatrixMaskWidget.cpp  MatrixMaskWidget.h  Watershed.cpp  Watershed.h
